--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -25,7 +25,7 @@
                                         <table>
                                             <tbody>
                                                 <tr class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span class="required-field">Task # {{model.taskNumber}}</span></label>
                                                     </td>
                                                     <td class="valueNW description-container" colspan="5">
@@ -40,7 +40,7 @@
                                                 </tr>
 
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Person</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -54,7 +54,7 @@
                                                                 [(ngModel)]="model.assignedTo">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Team</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -67,7 +67,7 @@
                                                                 [(ngModel)]="model.assignedTeam">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Event</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -83,7 +83,7 @@
                                                 </tr>
 
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label url U edge-cell" nowrap="nowrap">
+                                                    <td class="label url N edge-cell" nowrap="nowrap">
                                                         <label><span>Fixed Assignment</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -93,7 +93,7 @@
                                                                 [data]="yesNoList">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label url U edge-cell" nowrap="nowrap">
+                                                    <td class="label url N edge-cell" nowrap="nowrap">
                                                         <label><span>Send Notification</span></label>
                                                     </td>
                                                     <td  class="valueNW">
@@ -103,7 +103,7 @@
                                                                 [data]="yesNoList">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Action</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -118,7 +118,7 @@
                                                 </tr>
 
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span class="required-field">Category</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -132,7 +132,7 @@
                                                             <div class="error-message">{{'TASK_MANAGER.EDIT.REQUIRED_FIELD' | translate}}</div>
                                                         </div>
                                                     </td>
-                                                    <td class="label url U edge-cell" nowrap="nowrap">
+                                                    <td class="label url N edge-cell" nowrap="nowrap">
                                                         <label><span>Asset Class</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -146,7 +146,7 @@
                                                                 [(ngModel)]="model.assetClass">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Asset</span></label>
                                                     </td>
                                                     <td class="valueNW asset-entity">
@@ -161,7 +161,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Instruction Link</span></label>
                                                     </td>
                                                     <td class="valueNW instructions-link">
@@ -175,7 +175,7 @@
                                                         </div>
 
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Priority</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -186,7 +186,7 @@
                                                                 [(ngModel)]="model.priority">
                                                         </kendo-dropdownlist>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Due Date</span></label>
                                                     </td>
 
@@ -200,7 +200,7 @@
                                                 </tr>
 
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Estimated Duration</span></label>
                                                     </td>
                                                     <td class="valueNW duration-container">
@@ -236,7 +236,7 @@
                                                             </label>
                                                         </div>
                                                     </td>
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Estimated Start</span></label>
                                                     </td>
                                                     <td class="valueNW">
@@ -249,7 +249,7 @@
                                                         </kendo-dateinput>
                                                     </td>
 
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Estimated Finish</span></label>
                                                     </td>
 
@@ -271,7 +271,7 @@
                                                 </tr>
 
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Actual Start</span></label>
                                                     </td>
 
@@ -279,7 +279,7 @@
                                                         <span class="read-only-dates">{{model.actualStart}}</span>
                                                     </td>
 
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>Actual Finish</span></label>
                                                     </td>
 
@@ -287,7 +287,7 @@
                                                         <span class="read-only-dates">{{model.actualFinish}}</span>
                                                     </td>
 
-                                                    <td class="label U edge-cell" nowrap="nowrap">
+                                                    <td class="label N edge-cell" nowrap="nowrap">
                                                         <label><span>TaskSpec ID</span></label>
                                                     </td>
 
@@ -296,7 +296,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
-                                                    <td class="label U status-cell" nowrap="nowrap">
+                                                    <td class="label N status-cell" nowrap="nowrap">
                                                         <label><span>Status</span></label>
                                                     </td>
                                                     <td class="valueNW task-status vertical-note-status">
@@ -310,7 +310,7 @@
 
 
 
-                                                    <td class="label U edge-cell vertical-note-status" nowrap="nowrap">
+                                                    <td class="label N edge-cell vertical-note-status" nowrap="nowrap">
                                                         <label><span>Note</span></label>
                                                     </td>
                                                     <td class="valueNW.note" colspan="4">
