--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -63,7 +63,7 @@
                                 <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                                     <kendo-dropdownlist
                                             name="field" class="form-control field"
-                                            [data]="editRows.options[rowIndex].fields"
+                                            [data]="editRows.field[rowIndex].fields"
                                             [value]="editRows.selectedValues[rowIndex].field"
                                             (valueChange)="onFieldValueChange($event, rowIndex)"
                                             [valueField]="'id'"
@@ -77,7 +77,7 @@
                                 <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                                     <kendo-dropdownlist
                                             name="action" class="form-control action"
-                                            [data]="editRows.options[rowIndex].actions"
+                                            [data]="editRows.fields[rowIndex].actions"
                                             [value]="editRows.selectedValues[rowIndex].action"
                                             (valueChange)="onActionValueChange($event, rowIndex)"
                                             [valueField]="'id'"
@@ -101,11 +101,10 @@
                                            *ngIf="canShowControl('Number', rowIndex)"/>
 
                                     <!-- Datetime Fields -->
-                                    <kendo-datepicker [(ngModel)]="editRows.selectedValues[rowIndex].value"
-                                                      [ngModelOptions]="{standalone: true}"
-                                                      *ngIf="canShowControl('Date', rowIndex)"></kendo-datepicker>
+                                    <kendo-datepicker [(value)]="editRows.selectedValues[rowIndex].value"
+                                                      *ngIf="canShowControl('DateTime', rowIndex)"></kendo-datepicker>
 
-                                    <!-- Dropdown List Fields -->
+                                    <!-- Yes/No List Fields -->
                                     <kendo-dropdownlist
                                             *ngIf="canShowControl('YesNo', rowIndex)"
                                             name="yeNoList"
@@ -113,6 +112,16 @@
                                             [valueField]="'id'"
                                             [textField]="'text'"
                                             [data]="yesNoList">
+                                    </kendo-dropdownlist>
+
+                                    <!-- Option List Fields -->
+                                    <kendo-dropdownlist
+                                            *ngIf="canShowControl('Options', rowIndex)"
+                                            name="optionList"
+                                            [(ngModel)]="editRows.selectedValues[rowIndex].value"
+                                            [valueField]="'id'"
+                                            [textField]="'text'"
+                                            [data]="editRows.options[rowIndex]">
                                     </kendo-dropdownlist>
 
                                     <!-- Asset Tag Fields -->
