TM-12034 Fix issue setting the default selected event

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -77,7 +77,7 @@
                                                                 [data]="model.eventList"
                                                                 [textField]="'text'"
                                                                 [valueField]="'id'"
-                                                                [(ngModel)]="model.event">
+                                                                [(ngModel)]="model.event" [disabled]="isEventLocked">
                                                         </kendo-dropdownlist>
                                                     </td>
                                                 </tr>
