--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -75,6 +75,7 @@
                                                                 name="event"
                                                                 class="form-control"
                                                                 [data]="model.eventList"
+                                                                (selectionChange)="onSelectedEvent($event)"
                                                                 [textField]="'text'"
                                                                 [valueField]="'id'"
                                                                 [(ngModel)]="model.event" [disabled]="isEventLocked">
@@ -377,7 +378,7 @@
                                                             <tds-combobox
                                                                     class="status"
                                                                     [(model)]="dataItem.model"
-                                                                    [(metaParam)]="model.id"
+                                                                    [(metaParam)]="metaParam"
                                                                     (valueChange)="onModelChange($event)"
                                                                     [serviceRequest]="getTasksForComboBox"
                                                                     (selectionChange)="onDependencyTaskChange($event, 'predecessor', dataGridTaskPredecessorsHelper,  rowIndex)">
@@ -419,7 +420,7 @@
                                                         <tds-combobox
                                                                 class="status"
                                                                 [(model)]="dataItem.model"
-                                                                [(metaParam)]="model.id"
+                                                                [(metaParam)]="metaParam"
                                                                 (valueChange)="onModelChange($event)"
                                                                 [serviceRequest]="getTasksForComboBox"
                                                                 (selectionChange)="onDependencyTaskChange($event, 'successor', dataGridTaskSuccessorsHelper,  rowIndex)">
