TM-12665 Fix Comments: Even though nothing was modified, when Clicking ESC, Confirmation message is displayed and another Pop-up is closed

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-comment/single-comment.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-comment/single-comment.component.html
@@ -1,4 +1,4 @@
-<div class="single-comment-component modal fade in" id="single-comment-component" data-backdrop="static" tabindex="-1" role="dialog">
+<div tds-handle-escape (escPressed)="cancelCloseDialog()" class="single-comment-component modal fade in" id="single-comment-component" data-backdrop="static" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-md" role="document">
 		<div class="modal-content resizable" [style.width.px]="500">
 			<div class="modal-header">
