--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/task-comment.component.html
@@ -47,7 +47,7 @@
                 <ng-template kendoGridCellTemplate *ngIf="column.type === 'action'" let-dataItem>
                     <div class="k-grid-ignore-click action-button-list" style="cursor: default;" [ngClass]="{'single-right-btn-action': dataItem.commentInstance.taskNumber && dataItem.commentInstance.taskNumber !== 'null'}">
                         <!-- not yet supported -->
-                        <button (click)="openTaskComment(dataItem, modalType.EDIT)" class="btn btn-action btn-default" title="Edit">
+                        <button (click)="openTaskEdit(dataItem)" class="btn btn-action btn-default" title="Edit">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </button>
                         <button (click)="onDelete(dataItem)" class="btn btn-action btn-default btn-delete" title="Delete">
