--- a/web-app/tds/web-app/css/elements/component/task-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-component.sass
@@ -1,4 +1,7 @@
 .task-comment-component
+  .task-content,
+  .comment-content
+    margin-top: 10px
   .task-comment-grid
     .k-grid-header.k-grid-dynamic-header
       position: relative
