--- a/web-app/tds/web-app/css/elements/index.sass
+++ b/web-app/tds/web-app/css/elements/index.sass
@@ -4,6 +4,7 @@
 @import "component/field-settings-grid-component"
 @import "component/single-comment-component"
 @import "component/task-comment-component"
+@import "component/task-comment-dialog.component"
 @import "component/task-detail-component"
 
 @import "general/grid"
