TM-12216 Last change to the css

--- a/web-app/tds/web-app/css/elements/component/task-comment-dialog.component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-dialog.component.sass
@@ -2,6 +2,8 @@
   .tds-angular-component-content
     margin-top: -10px
   .task-comment-component
+    .k-grid-ignore-click
+      margin-left: 0px
     .task-content,
     .comment-content
       margin-top: 0px
