--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -6,6 +6,13 @@
 
 .tds-angular-component-content
   display: table
+  form.asset-entry-form
+    .ng-dirty.ng-invalid
+      border: 1px solid $color-message-error--red
+  form.asset-entry-form.form-submitted
+    .ng-invalid
+      border: 1px solid $color-message-error--red
+
   .dialog-container
     border: 1px solid transparent
     padding: 0
