TM-12270 - Lots of changes (functionality/style/button to launch)

--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -31,4 +31,4 @@
 @import "module/importBatch/field-reference-popup.component"
 @import "module/assetTags/tag-list.component"
 @import "module/taskManager/task-actions.component"
-
+@import "module/user/user-preferences.component"
