--- a/web-app/tds/web-app/app-js/modules/user/components/list/user-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/list/user-list.component.html
@@ -1,1 +1,1 @@
-Here be dragons list
+<span (click)="openPreferences()" class="preference-opener" style="width:50px;height:50px;background-color:blue">whoa</span>
