--- a/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
+++ b/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <ng-container *ngIf="pageMetaData">
-        <h1>
+        <h1 (click)="openPrefModal()">
             {{pageMetaData.title | translate}}
             <small>{{pageMetaData.instruction | translate}}</small>
         </h1>
