TM-12807 Set default value on add task

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -362,6 +362,7 @@
                                                     <tds-combobox
                                                             class="status"
                                                             [(model)]="dataItem.model"
+                                                            [defaultText]="'Please Select'"
                                                             [(metaParam)]="metaParam"
                                                             [innerTemplateFormat]="innerTemplateTaskItem"
                                                             [updateOnChanges]="true"
@@ -404,6 +405,7 @@
                                                     <tds-combobox
                                                             class="status"
                                                             [(model)]="dataItem.model"
+                                                            [defaultText]="'Please Select'"
                                                             [(metaParam)]="metaParam"
                                                             [innerTemplateFormat]="innerTemplateTaskItem"
                                                             [updateOnChanges]="true"
