--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -375,6 +375,7 @@
                                                             <tds-combobox
                                                                     class="status"
                                                                     [(model)]="dataItem.model"
+                                                                    [defaultText]="'Please Select'"
                                                                     [innerTemplateFormat]="innerTemplateTaskItem"
                                                                     [updateOnChanges]="true"
                                                                     [(metaParam)]="metaParam"
@@ -417,6 +418,7 @@
                                                         <tds-combobox
                                                                 class="status"
                                                                 [(model)]="dataItem.model"
+                                                                [defaultText]="'Please Select'"
                                                                 [updateOnChanges]="true"
                                                                 [innerTemplateFormat]="innerTemplateTaskItem"
                                                                 [(metaParam)]="metaParam"
