--- a/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
+++ b/web-app/tds/web-app/app-js/shared/modules/header/header.component.html
@@ -1,7 +1,8 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <ng-container *ngIf="pageMetaData">
-        <h1 (click)="openPrefModal()">
+        <span (click)="openPrefModal()" class="open-pref-modal">Click me, but remember to remove this text</span>
+        <h1>
             {{pageMetaData.title | translate}}
             <small>{{pageMetaData.instruction | translate}}</small>
         </h1>
